# agent-role-loop

./: .gitignore  PLAN.md  README.md  WORKITEM-module3-machine.md  pyproject.toml
.github/workflows/: docs.yml
adapters/claude-code/: README.md
adapters/claude-code/agents/: role-loop-builder.md  role-loop-clarifier.md  role-loop-planner.md  role-loop-reviewer-adversarial.md  role-loop-reviewer-boss.md  role-loop-reviewer-maintainability.md  role-loop-reviewer-pragmatic.md  role-loop-reviewer-strict.md  role-loop-triage.md
adapters/claude-code/commands/: orc.md
adapters/manual/: README.md  handoff-log-template.md
adapters/openai-compatible/: README.md
adapters/openai-compatible/examples/: builder.json  clarifier.json  planner.json  reviewer-adversarial.json  reviewer-boss.json  reviewer-maintainability.json  reviewer-pragmatic.json  reviewer-strict.json  (+1 more)
core/: loop.md  principles.md
core/contracts/: build-packet.md  clarifier-result.md  final-verdict.md  gate-decision.md  review-handoff.md  reviewer-verdict.md  triage-decision.md  work-item.md
core/roles/: builder.md  clarifier.md  human-gate.md  planner.md  reviewer-adversarial.md  reviewer-boss.md  reviewer-maintainability.md  reviewer-pragmatic.md  reviewer-strict.md  triage.md
docs/: Makefile  conf.py
teaching/: _werkitem-template.md  begrippen.md  conventies.md  index.md  kwaliteit-als-gedeelde-verantwoordelijkheid.md  literatuur.md  references.bib  schrijfwijzer.md
teaching/_toetsing/: README.md
teaching/lessen/: les1-context-rot.md
teaching/oefeningen/: oefening1-ervaar-context-rot.md
(+27 files in other folders)
