[project]
name = "agent-role-loop"
version = "0.1.0"
description = "A portable multi-agent role loop for engineering work, with teaching material (Dutch) built as a Sphinx/MyST site."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
docs = [
    "sphinx>=8.1",
    "myst-parser>=4.0",
    "furo>=2024.8.6",
    "sphinxcontrib-mermaid>=1.0",
    "sphinxcontrib-bibtex>=2.7.0",
]

[tool.uv]
# Prose repository: nothing to build or install as a package.
package = false
